<resources>
    <string name="app_name">Balisti</string>
    <string name="user_name">User</string>
    <string name="nav_start">Start</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_other">Other</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">FeedBack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartGame_Btn">Start Game</string>
    <string name="nav_open_drawner">Open Panel</string>
    <string name="nav_close_drawner">Close Panel</string>
</resources>
